fixed navigation on mobile

--- a/css/large.css
+++ b/css/large.css
@@ -1,53 +1,35 @@
 /* Main Navigation */
 @media only screen and (min-width: 1024px) {
-    nav > ul {
-        list-style: none;
-    }
     
+    nav {
+        border-style: none;
+    }
+
     #primary-nav {
+        display: flex;
+        justify-content: flex-end;
         border-style: solid;
+        padding: 0;
+        margin: 0;
     }
     
     #secondary-nav {
-        border-style: solid;
-    }
-    
-    #primary-nav > ul {
         display: flex;
         justify-content: flex-end;
-        margin: 8px;
-    }
-    
-    #secondary-nav > ul {
-        display: flex;
-        justify-content: flex-end;
-        margin: 2px;
-    }
-    
-    #primary-nav > ul > li {
-        margin: 0px 15px;
-    }
-    
-    #secondary-nav > ul > li {
-        margin: 0px 15px;
-    }
-
-    /* Homepage Hero Section */
-
-    .hero {
         border-style: solid;
-        display: flex;
-        justify-content: center;
-        padding: 50px 0;
+        padding: 0;
+        margin: 0;
+    }
+    
+    #primary-nav > li {
+        margin: 8px 15px;
+    }
+    
+    #secondary-nav > li {
+        margin: 2px 15px;
     }
 
-    /* Homepage - Who we are section */
-
-    .homepage-who-we-are {
-        border-style: solid;
-        display: flex;
-        justify-content: center;
-    }
+ 
 
 } /* end of media query */
 
