--- a/css/small.css
+++ b/css/small.css
@@ -15,6 +15,45 @@ body {
     font-weight: 300;
 }
 
+/* Navigation */
+
+nav {
+    border-style: solid;
+    padding: 0;
+}
+
+nav > ul {
+    list-style: none;
+    text-align: center;
+    padding: 0;
+}
+
+#primary-nav {
+    margin-bottom: 0;
+}
+
+#secondary-nav {
+    margin-top: 0;
+}
+
+/* Homepage Hero Section */
+
+.hero {
+    border-style: solid;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0;
+}
+
+/* Homepage - Who we are section */
+
+.homepage-who-we-are {
+    border-style: solid;
+    display: flex;
+    justify-content: center;
+}
+
+
 /* Hompage Products */
 
 .homepage-products > ul {
